manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restabarlabello-front
  namespace: restabarlabello
  labels:
    app: restabarlabello-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restabarlabello-front
  template:
    metadata:
      labels:
        app: restabarlabello-front
    spec:
      containers:
      - name: restabarlabello-front
        image: acrpriori.azurecr.io/restabarlabello-front # Ensure correct image name!
        ports:
        - containerPort: 3000
        # resources:
        #   limits:
        #     cpu: "500m"
        #     memory: "512Mi"
        #   requests:
        #     cpu: "250m"
        #     memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: restabarlabello-front
  namespace: restabarlabello
spec:
  selector:
    app: restabarlabello-front
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
